# VMOS-SDK-New

./: .env.example  .gitignore  README.md  pyproject.toml
AccessRootVMOS/verify/: _check_magisk_env_fresh.py  _check_switchroot_magisk.py  _compare_magisk.py  _copy_to_sdcard.py  _diag_google_one.py  _dump_install_sh.py  _dump_magisk_on.py  _dump_magisk_trigger.py  _dump_toolbox_ui.py  _find_base_url.py  _find_toolbox_magisk_files.py  _fix_google_one.py  _get_magisk_download_url.py  _launch2.py  _launch_google_one.py  _launch_toolbox.py  _launch_toolbox2.py  _probe_magisk_env_location.py  _probe_new_device.py  _push_files_to_github.py  _read_install_sh.py  _sniff_toolbox_download.py  _upload_binaries_gh.py  _upload_local_to_github.py  _upload_to_transfer_sh.py  auto_enable_magisk_and_spoof.py  auto_spoof_no_toolbox.py  inject_resetprop.py  magisk_arm64  probe_after_switchroot.py  spoof_resetprop.py  wait_magisk_then_spoof.py
docs/: API.txt  Auth_Key.txt  CallbackTaskBusinessTypCodes.txt  ErrorCode.txt  InstanceAndroidPropList.txt  Instance_Property_List.txt  LSPosed_FrameWork.txt  Mobile_Root_Certificate_Format_Specification.txt  Sensor_Data_Dynamic_Simulation.txt  UserGUIDE.txt  V2_Simplified_Signature.txt  openapi.yaml  vmoscloud-api.txt
examples/: basic_usage.py  pixel10_spoof.py
tests/: test_auth.py
vmos_sdk/: __init__.py  auth.py  client.py  config.py  constants.py  exceptions.py  models.py  utils.py
vmos_sdk/api/: __init__.py  account_matrix.py  application.py  automation.py  cloud_phone.py  cloud_space.py  email.py  instance.py  proxy.py  sdk_token.py  (+1 more)
(+9 files in other folders)
